Fix Proxy crash in Tier5Script, parameterize SQL, update packages
- Fix: navigator Proxy enumeration crash (javaEnabled invariant violation)
  Wrap for..in loop in try/catch - privacy extensions cause TypeError
  Records 102,103,106,107,110,111 all failed from this bug

- Security: Parameterize date query params in DashboardEndpoints (SQL injection)
- Fix: Bot rate ternary was inverted in Stats.cshtml (>25 never fired)
- Fix: Kestrel config had Limits but no Endpoints (silent port fallback)
- Fix: FileTrackingLogger disposal wired to ApplicationStopping
- Fix: KnownNetworks -> KnownIPNetworks (.NET 10 deprecation)
- Fix: Nullable dereference in MetricsService

- Cleanup: Replace ToCamelCase hack with DictionaryKeyPolicy
- Cleanup: Remove dead usings, PublishAot false, double ContentType
- Cleanup: Path traversal check upgraded to Path.GetFileName()

- Packages: WindowsServices 10.0.0->10.0.2, SqlClient 6.0.1->6.1.4, Dapper 2.1.35->2.1.66

--- a/TrackingPixel.Modern/appsettings.json
+++ b/TrackingPixel.Modern/appsettings.json
@@ -8,6 +8,14 @@
   "AllowedHosts": "*",
   
   "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:6000"
+      },
+      "Https": {
+        "Url": "https://*:6001"
+      }
+    },
     "Limits": {
       "MaxConcurrentConnections": 1000,
       "MaxConcurrentUpgradedConnections": 1000,
